--- a/examples/pyja_geocoder_example.ipynb
+++ b/examples/pyja_geocoder_example.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -51,9 +51,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Downloading MLIT shapefile: 100%|██████████| 611M/611M [00:13<00:00, 44.6MB/s] \n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -86,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -164,7 +171,7 @@
               "2     北海道   石狩振興局     NaN     札幌市     中央区   01101"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -192,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -251,7 +258,7 @@
               "1   36.2048   140.3625           B"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -266,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "id": "53b22088",
       "metadata": {},
       "outputs": [
@@ -348,7 +355,7 @@
               "1   08236  "
             ]
           },
-          "execution_count": 6,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -370,7 +377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -432,7 +439,7 @@
               "1   36.2048   140.3625           B  POINT (140.3625 36.2048)"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -446,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "id": "ea719cd8",
       "metadata": {},
       "outputs": [
@@ -531,7 +538,7 @@
               "1     NaN    小美玉市     NaN   08236  "
             ]
           },
-          "execution_count": 10,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -552,7 +559,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "id": "a21f4b94",
       "metadata": {},
       "outputs": [],
